# Fe2O3

./: .gitmodules  Cargo.toml  README.md
.devcontainer/: devcontainer.json
CTF/: Cargo.toml  README.md  build.rs
CTF/src/: .gitignore  crypto.h  encrypt_nativelib.lib  encrypted1.txt  main.rs
learn/0-what-is-rust/: Cargo.toml  README.md
learn/1-hello-world/: README.md
learn/1-hello-world/src/: main.rs
learn/2-ownership/: Cargo.toml  README.md  advanced.md  memory.md  smart-pointers.md  unsafe.md
learn/2-ownership/src/: book.rs  borrow.rs  main.rs  mut_borrow.rs  scope.rs
learn/3-type-system/: Cargo.toml  README.md  strings.md
learn/3-type-system/src/: main.rs
learn/4-traits/: README.md
learn/4-traits-and-structs/: Cargo.toml  README.md  advanced.md
learn/4-traits-and-structs/src/: main.rs
learn/5-error-handling/: Cargo.toml  README.md
learn/5-error-handling/src/: cluster.json  lib.rs  main.rs
learn/7-macros/: README.md
learn/rust-arrays/: README.md
learn/rust-builtin-types/: README.md
learn/rust-control-flow-and-loops/: README.md
learn/rust-references-and-borrow/: README.md
learn/rust-slices/: README.md
learn/rust-variables/: README.md
tinker/: Cargo.toml  README.md
tinker/src/: crypto.rs  encrypted.txt  encrypted2.txt  encrypted3.txt  main.rs  tinker.rs
