[package]
name = "ownership"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "scope"
path = "src/scope.rs"

[[bin]]
name = "borrow"
path = "src/borrow.rs"

[[bin]]
name = "mut_borrow"
path = "src/mut_borrow.rs"

[dependencies]
